--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         "issues": "https://github.com/cringer/psr4-template/issues"
     },
     "require": {
-        "php": ">=5.3.7"
+        "php": ">=5.4.0"
     },
     "autoload": {
         "psr-4": {
-            "Psr4\\": "src/"
+            "App\\": "src/"
         }
     },
     "minimum-stability": "dev"
