--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,34 @@
 {
-    "name": "cringer/psr4-template",
-    "description": "PHP project template using PSR-4 standards",
+    "name": "poing/blazon",
+    "description": "PSR-4 Composer Package",
     "keywords": ["psr4", "template"],
-    "homepage": "https://github.com/cringer/psr4-template",
+    "homepage": "https://github.com/poing/blazon",
     "license": "MIT",
     "authors": [
         {
-            "name": "Jeremy Schaffer",
-            "email": "jeremys@codenexus.org"
+            "name": "Brian LaVallee",
+            "email": "brian.lavallee@invite-comm.jp",
+            "homepage": "http://www.invite-comm.jp"
         }
     ],
     "support": {
-        "email": "support@codenexus.org",
-        "issues": "https://github.com/cringer/psr4-template/issues"
+        "issues": "https://github.com/poing/blazon/issues"
     },
     "require": {
         "php": ">=5.6.4"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/poing/blazon"
+        }
+    ]
 }
+
+
