--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "poing/blazon",
     "description": "PSR-4 Composer Package",
+    "version": "0.0.0-dev18340",
     "keywords": ["psr4", "template"],
     "homepage": "https://github.com/poing/blazon",
     "license": "MIT",
