--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     "require": {
         "php": ">=5.6.4"
     },
-    "optimize-autoloader": true,
+    "config": {
+        "optimize-autoloader": true
+    },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
